--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -9,4 +9,8 @@
         display: flex;
         justify-content: flex-end;
     }
+    .buttons{
+        display: flex;
+        justify-content: space-between;
+    }
 }
