--- a/src/components/custom-button/custom-button.css
+++ b/src/components/custom-button/custom-button.css
@@ -24,6 +24,6 @@
   color: white;
 }
 .custom-button.google-sign-in:hover {
-  background-color: #357ae8;
+  background-color: #1952af;
   border: none;
 }
