--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -25,7 +25,7 @@
     background-color:#4285f4;
     color: white;
     &:hover {
-      background-color: #357ae8;
+      background-color: #1952af;
       border:none;
     }
   }
