--- a/src/components/sign-in/sign-in.css
+++ b/src/components/sign-in/sign-in.css
@@ -1,14 +1,10 @@
 .sign-in {
-  width: 30vw;
+  width: 380px;
   display: flex;
   flex-direction: column;
 }
 .sign-in .title {
   margin: 10px 0;
-}
-.sign-in .single-line {
-  display: flex;
-  justify-content: flex-end;
 }
 .sign-in .buttons {
   display: flex;
