--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,8 +6,8 @@
   margin-bottom: 25px;
 }
 .header .logo-container {
-  height: 100%;
-  width: 70px;
+  height: 100px;
+  width: 100px;
   padding: 25px;
 }
 .header .options {
