--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,8 +6,8 @@
     margin-bottom: 25px;
   
     .logo-container {
-      height: 100%;
-      width: 70px;
+      height: 100px;
+      width: 100px;
       padding: 25px;
     }
   
