cart redux added

--- a/src/components/menu-items/menu-item.css
+++ b/src/components/menu-items/menu-item.css
@@ -22,6 +22,12 @@
   background-position: center;
   background-size: cover;
 }
+.menu-item:hover {
+  opacity: 0.88;
+}
+.menu-item:hover .content {
+  opacity: 0.8;
+}
 .menu-item.large {
   height: 380px;
 }
