--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -14,6 +14,8 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
   //text-align: center;
 
   &:hover {
@@ -28,5 +30,16 @@
       background-color: #1952af;
       border:none;
     }
+  }
+  &.inverted {
+     background-color: white;
+    color: black;
+    border: 1px solid black;
+    
+  &:hover {
+    background-color: black;
+    color: white;
+    border: none;
+  }
   }
 }
