--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans Condensed', sans-serif;
   padding:20px 60px;
+  background-color:rgb(223, 245, 247);
 }
 a {
 text-decoration: none;
