--- a/src/components/menu-items/menu-item.css
+++ b/src/components/menu-items/menu-item.css
@@ -37,6 +37,11 @@
 .menu-item:last-child {
   margin-left: 7.5px;
 }
+@media only screen and (max-width: 800px) {
+  .menu-item {
+    height: 380px;
+  }
+}
 .menu-item .content {
   height: 90px;
   padding: 0 25px;
