--- a/src/components/collection-item/collection-item.css
+++ b/src/components/collection-item/collection-item.css
@@ -21,12 +21,31 @@
   top: 255px;
   display: none;
 }
+@media only screen and (max-width: 800px) {
+  .collection-item .custom-button {
+    display: block;
+    opacity: 0.9;
+    min-width: unset;
+    padding: 0 10px;
+  }
+}
 .collection-item:hover .image {
   opacity: 0.8;
 }
 .collection-item:hover .custom-button {
   opacity: 0.85;
   display: flex;
+}
+@media only screen and (max-width: 800px) {
+  .collection-item {
+    width: 40vw;
+  }
+  .collection-item:hover .image {
+    opacity: unset;
+  }
+  .collection-item:hover .custom-button {
+    opacity: unset;
+  }
 }
 .collection-item .collection-footer {
   width: 100%;
