--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -23,6 +23,12 @@
     position: absolute;
     top: 255px;
     display: none;
+    @media only screen and (max-width:800px){
+      display: block;
+      opacity:0.9;
+      min-width: unset;
+      padding:0 10px
+    }
   }
   &:hover {
     .image{
@@ -33,6 +39,18 @@
       display: flex;
     }
   }
+  @media only screen and (max-width:800px){
+    width: 40vw;
+
+    &:hover {
+      .image{
+        opacity: unset;
+      }
+      .custom-button{
+        opacity:unset;
+      }
+    }
+}
     .collection-footer {
       width: 100%;
       height: 5%;
