--- a/src/components/preview-collection/preview-collection.css
+++ b/src/components/preview-collection/preview-collection.css
@@ -3,6 +3,11 @@
   flex-direction: column;
   margin-bottom: 30px;
 }
+@media only screen and (max-width: 800px) {
+  .collection-preview {
+    align-items: center;
+  }
+}
 .collection-preview .title {
   font-size: 28px;
   margin-bottom: 25px;
@@ -10,4 +15,11 @@
 .collection-preview .preview {
   display: flex;
   justify-content: space-between;
+}
+@media only screen and (max-width: 800px) {
+  .collection-preview .preview {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+  }
 }
