--- a/src/components/preview-collection/preview-collection.scss
+++ b/src/components/preview-collection/preview-collection.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    @media only screen and (max-width:800px){
+      align-items: center;
+        }
   
     .title {
       font-size: 28px;
@@ -11,6 +14,12 @@
     .preview {
       display: flex;
       justify-content: space-between;
+
+      @media only screen and (max-width:800px){
+        display: grid ;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 15px;
+      }
     }
   }
   
