--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -23,12 +23,12 @@
     position: absolute;
     top: 255px;
     display: none;
-    @media only screen and (max-width:800px){
-      display: block;
-      opacity:0.9;
-      min-width: unset;
-      padding:0 10px
-    }
+    // @media only screen and (max-width:800px){
+    //   display: block;
+    //   opacity:0.9;
+    //   min-width: unset;
+    //   padding:0 10px
+    // }
   }
   &:hover {
     .image{
