--- a/src/pages/collection/collection-page.css
+++ b/src/pages/collection/collection-page.css
@@ -11,6 +11,15 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
 }
+@media only screen and (max-width: 800px) {
+  .collection-page .items {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 60vh;
+    align-items: center;
+  }
+}
 .collection-page .items .collection-item {
   margin-bottom: 30px;
 }
