--- a/src/components/menu-items/menu-item.css
+++ b/src/components/menu-items/menu-item.css
@@ -10,6 +10,16 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media only screen and (max-width: 800px) {
+  .directory-menu {
+    width: 100vw;
+    padding: 10px;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 .menu-item {
   min-width: 30%;
   height: 240px;
