--- a/src/components/menu-items/menu-item.scss
+++ b/src/components/menu-items/menu-item.scss
@@ -10,6 +10,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media only screen and (max-width:800px){
+      width: 100vw;
+      padding: 10px;
+      display: grid;
+      flex-direction: column;
+      align-items: center;
+      grid-template-columns: 1fr 1fr;
+    }
   }
   
   .menu-item {
@@ -45,7 +53,7 @@
     @media only screen and (max-width:800px){
       height: 380px;
   }
-  
+
     .content {
       height: 90px;
       padding: 0 25px;
