--- a/src/pages/collection/collection-page.css
+++ b/src/pages/collection/collection-page.css
@@ -14,9 +14,11 @@
 @media only screen and (max-width: 800px) {
   .collection-page .items {
     padding: 10px;
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
   }
 }
 .collection-page .items .collection-item {
