--- a/src/pages/collection/collection-page.scss
+++ b/src/pages/collection/collection-page.scss
@@ -13,10 +13,12 @@
     grid-gap: 10px;
     @media only screen and (max-width:800px){
       padding: 10px;
-      display: flex;
+      display: grid;
       flex-direction: column;
       align-items: center;
-        }
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+    }
 
     & .collection-item {
       margin-bottom: 30px;
