--- a/src/pages/checkout-page/check-out.css
+++ b/src/pages/checkout-page/check-out.css
@@ -6,6 +6,11 @@
   align-items: center;
   margin: 50px auto 0;
 }
+@media only screen and (max-width: 800px) {
+  .checkout-page {
+    width: 80%;
+  }
+}
 .checkout-page .checkout-header {
   width: 100%;
   padding: 10px 0;
