--- a/src/pages/checkout-page/check-out.scss
+++ b/src/pages/checkout-page/check-out.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+    @media only screen and (max-width:800px){
+      width: 80%;
+
+    }
   
     .checkout-header {
       width: 100%;
